fix(benchmark/compaction-baseline): Make the Docker image actually build and run
Several issues prevented `docker build -f benchmark/compaction-baseline/Dockerfile .`
from succeeding from the repo root, and the resulting image crashed on first
SparkContext init. Fixed end-to-end and smoke-tested with a 2-seed fuzz run:

- Dockerfile.dockerignore (new): the repo-root .dockerignore is tuned for an
  iceberg-core-only JMH image and would exclude spark/, data/, parquet/, etc.
  -- modules this image needs. BuildKit prefers a per-Dockerfile ignore when
  -f is used, so this file overrides it. Also excludes
  benchmark/cloud-runner/container/output/ to avoid the permission-denied error
  on the legacy_credentials/ gcloud cache.
- Preflight check that fails fast with a clear message when the build context
  is the module dir instead of the repo root (cryptic ./gradlew: not found
  was the previous failure mode).
- Inject placeholder version.txt and iceberg-build.properties so gradle
  succeeds without .git/ in the build context (which we deliberately exclude
  via Dockerfile.dockerignore -- big and not needed).
- COPY --from=build pattern: shadowJar sets archiveClassifier=''  so the jar
  is `compaction-baseline-*.jar`, not `*-all.jar`. The old wildcard matched
  nothing and the build "succeeded" with an empty /app/ -- runtime then died
  with ClassNotFoundException on FuzzMain.
- ENTRYPOINT: bake in the same 20 --add-opens flags that scripts/fuzz.sh
  already uses, fixing the Spark-3.5-on-Java-17 IllegalAccessError on
  sun.nio.ch.DirectBuffer.

README updated with the now-verified build + run commands and notes on
BuildKit's per-Dockerfile ignore behaviour.

Smoke test (docker run cmpmap-fuzz:latest --seed-count 2 ...):
  seedsRun=2 seedsFailed=0 seedsTimedOut=0 totalElapsedMs=21607

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>